# ipip

./: .gitignore  BUILD_FIX_SUMMARY.md  Makefile  PROGRESS_FEATURES.md  README.md  WINDOWS_TROUBLESHOOTING.md  build.py  check_import_issues.py  fast_build.py  fix_package_name.py  install.bat  install.sh  publish_to_pypi.py  pyproject.toml  quick_wheel.py  requirements.txt  setup.py  uninstall.bat  uninstall.sh
.github/workflows/: publish.yml  test.yml
docs/: BUILD_SUCCESS.md  BUILD_TIMING_ANALYSIS.md  CLEAN_INSTALL_GUIDE.md  CONVERSATIONAL_FILES_GUIDE.md  FILE_OPERATIONS_GUIDE.md  FINAL_STATUS.md  INSTALL.md  INSTALL_GUIDE.md  QUICKSTART.md  SAFETY_EXCLUSIONS.md  SIMPLE_BUILD.md  STATUS.md  WINDOWS_FIX.md  WINDOWS_INSTALL.md  install_better_model.md
ipip/: file_analyzer.py  file_operations.py
tests/: __init__.py
