[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inpip"
version = "0.1.0"
description = "Intelligent pip package installer using AI to resolve package names"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cody Serino (Zero)", email = "iamtheoriginalzero@gmail.com"}
]
keywords = ["pip", "package", "installer", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
ipip = "ipip.cli:main"

[project.urls]
Homepage = "https://github.com/codyreign/ipip"
Repository = "https://github.com/codyreign/ipip"
Issues = "https://github.com/codyreign/ipip/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipip*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true